--- a/main.css
+++ b/main.css
@@ -17,6 +17,9 @@ html, body, h1, h2, h3, h4, p, div, ul, li, a {
 	font-family: "ACMountain";
 	src: url(assets/fonts/ACMountain.otf);
 }
+button {
+  transition: background-color 0.1s;
+}
 /*Logo Style*/
 #header {
   font-family: "ACMountain", "Helvetica Neue", Helvetica, sans-serif;
