styles match button

--- a/main.css
+++ b/main.css
@@ -220,15 +220,18 @@ height:400px;
 }
 .pb-container .pb-button {
   background: transparent;
-  border: 2px solid currentColor;
+  border: 2px solid #F5CB5C;
   border-radius: 27px;
-  color: currentColor;
+  color: black;
   cursor: pointer;
   padding: 0.7em 1em;
   text-decoration: none;
   text-align: center;
   height: 54px;
-  width: 100%;
+  width: 20%;
+  padding: 3px;
+  margin: auto 40%;
+  margin-top: 5px;
   -webkit-tap-highlight-color: transparent;
   outline: none;
   transition: background-color 0.3s, width 0.3s, border-width 0.3s, border-color 0.3s, border-radius 0.3s;
