--- a/matchly-server/assets/main.css
+++ b/matchly-server/assets/main.css
@@ -1,7 +1,11 @@
 /*Style Guide*/
+
+
 /*Yellow: #F5CB5C*/
 
+
 /*remove all preset styles*/
+
 html, body, h1, h2, h3, h4, p, div, ul, li, a {
   padding: 0;
   border: 0;
@@ -12,7 +16,9 @@ html, body, h1, h2, h3, h4, p, div, ul, li, a {
   list-style: none;
   text-decoration: none;
 }
+
 /*create logo font ACMountain*/
+
 @font-face {
   font-family: "ACMountain";
   src: url(/assets/fonts/ACMountain.otf);
@@ -20,21 +26,26 @@ html, body, h1, h2, h3, h4, p, div, ul, li, a {
 button {
   transition: background-color 0.1s;
 }
+
 /*Logo Style*/
+
 #header {
-  font-family: "ACMountain", "Helvetica Neue", Helvetica, sans-serif;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 75px;
   text-align: center;
   color: #F5CB5C;
-  background-color: #000000;
-  padding: 30px 0;
+  padding: 30px 0 30px 50px;
 }
+
 /*Set everything to Helvetica Neue*/
+
 #workBox, #available-box, #Upload-box, h3, h4 {
   font-family: "Helvetica Neue", Helvetica, sans-serif;
 }
+
 /*nav bar & available page padding for mobile*/
-@media screen and (max-width:600px)  {
+
+@media screen and (max-width:600px) {
   #tabs {
     background-color: #3F3F3F;
     display: block;
@@ -42,7 +53,7 @@ button {
     padding-top: 20px;
     padding-bottom: 20px;
   }
-  #tabs li{
+  #tabs li {
     font-size: 25px;
     font-weight: 200;
     display: block;
@@ -51,12 +62,15 @@ button {
   }
   #classAvailable {
     margin: 5vh 2vw;
-  }#columnTitle {
+  }
+  #columnTitle {
     padding-right: 5px;
   }
 }
+
 /*nav bar & available page padding for desktop*/
-@media screen and (min-width:601px)  {
+
+@media screen and (min-width:601px) {
   #tabs {
     background-color: #3F3F3F;
     display: inline-block;
@@ -72,7 +86,7 @@ button {
     display: table-cell;
     text-align: center;
   }
-  #tabs li{
+  #tabs li {
     font-size: 25px;
     font-weight: 200;
     padding: 0 5%;
@@ -86,11 +100,15 @@ button {
     padding-right: 50px;
   }
 }
+
 /*Yellow coloring for link hover*/
-#tabs li:hover{
+
+#tabs li:hover {
   color: #F5CB5C;
 }
+
 /*Buttons within app*/
+
 #matchButton, #exportButton, #submitButton, #txtFileUpload, #updateButton, #confirm-button {
   font-family: "Helvetica Neue", Helvetica, sans-serif;
   font-size: 17px;
@@ -101,10 +119,10 @@ button {
   display: block;
   margin: 10px auto 10px auto;
 }
-#uploadForm #submitbutton, #uploadForm #confirm-button {
+#uploadForm #submitbutton, #uploadForm #confirm-button {}
 
-}
 /*Buttons before login*/
+
 #submitRegister, #loginButtons #submit, #loginButtons #register {
   font-family: "Helvetica Neue", Helvetica, sans-serif;
   font-size: 17px;
@@ -118,7 +136,9 @@ button {
 #submitRegister {
   margin-left: 4vw;
 }
+
 /*Login Components*/
+
 #tabs h4 {
   font-size: 25px;
   font-weight: 200;
@@ -130,7 +150,6 @@ button {
   display: block;
   padding-top: 30px;
 }
-
 #loginContainer, #registerBox {
   display: table;
 }
@@ -144,6 +163,8 @@ button {
 }
 
 /*Match Component*/
+
+
 /*
 #loading {
   width: 50px;
@@ -156,16 +177,17 @@ button {
 }
 */
 
+
 /*Available Component*/
+
 .sections {
-    display: inline-block;
-    width: 15%;
+  display: inline-block;
+  width: 15%;
 }
-.row-title{
+.row-title {
   display: inline-block;
 }
-#topRow {
-}
+#topRow {}
 #topRowTitles {
   text-align: center;
 }
@@ -174,39 +196,39 @@ button {
 }
 
 /*Upload Component*/
+
 #uploadForm, #dvImportSegments {
   width: 50%;
   margin: 15px auto;
   text-align: center;
 }
-.host{
+.host {
   display: inline-block;
 }
-#file-form {
-}
+#file-form {}
 .fileupload {
   display: block;
   margin: 0 auto;
 }
 
 /*legacy code ????*/
-#calendar{
+
+#calendar {
   border-style: solid;
   border-radius: 5px;
   border-top-color: black;
 }
-
-.day{
+.day {
   margin: 5px;
 }
-#array-of-individuals{
-overflow:scroll;
-height:400px;
+#array-of-individuals {
+  overflow: scroll;
+  height: 400px;
 }
-.table-row{
+.table-row {
   display: block;
 }
-.minorPadding td{
+.minorPadding td {
   padding-left: 5px;
   padding-right: 5px;
 }
@@ -257,8 +279,7 @@ height:400px;
   stroke: currentColor;
   stroke-width: 5;
 }
-.pb-container .pb-button svg.pb-checkmark path,
-.pb-container .pb-button svg.pb-cross path {
+.pb-container .pb-button svg.pb-checkmark path, .pb-container .pb-button svg.pb-cross path {
   stroke: #fff;
   stroke-linecap: round;
   stroke-width: 4;
@@ -321,7 +342,6 @@ height:400px;
   margin-left: -8px;
   position: absolute;
 }
-
 .tether-element-attached-top .datepicker__triangle, .tether-element-attached-bottom .datepicker__triangle, .tether-element-attached-top .datepicker__triangle:before, .tether-element-attached-bottom .datepicker__triangle:before {
   box-sizing: content-box;
   position: absolute;
@@ -329,7 +349,6 @@ height:400px;
   height: 0;
   width: 1px;
 }
-
 .tether-element-attached-top .datepicker__triangle:before, .tether-element-attached-bottom .datepicker__triangle:before {
   content: "";
   z-index: -1;
@@ -337,39 +356,30 @@ height:400px;
   left: -8px;
   border-bottom-color: #aeaeae;
 }
-
 .tether-element-attached-top .datepicker__triangle {
   top: 0;
   margin-top: -8px;
 }
-
-.tether-element-attached-top .datepicker__triangle,
-.tether-element-attached-top .datepicker__triangle:before {
+.tether-element-attached-top .datepicker__triangle, .tether-element-attached-top .datepicker__triangle:before {
   border-top: none;
   border-bottom-color: #f0f0f0;
 }
-
 .tether-element-attached-top .datepicker__triangle:before {
   top: -1px;
   border-bottom-color: #aeaeae;
 }
-
 .tether-element-attached-bottom .datepicker__triangle {
   bottom: 0;
   margin-bottom: -8px;
 }
-
-.tether-element-attached-bottom .datepicker__triangle,
-.tether-element-attached-bottom .datepicker__triangle:before {
+.tether-element-attached-bottom .datepicker__triangle, .tether-element-attached-bottom .datepicker__triangle:before {
   border-bottom: none;
   border-top-color: #fff;
 }
-
 .tether-element-attached-bottom .datepicker__triangle:before {
   bottom: -1px;
   border-top-color: #aeaeae;
 }
-
 .datepicker {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 11px;
@@ -380,18 +390,15 @@ height:400px;
   display: inline-block;
   position: relative;
 }
-
 .datepicker__container {
   position: absolute;
   display: inline-block;
   z-index: 2147483647;
 }
-
 .datepicker__triangle {
   position: absolute;
   left: 50px;
 }
-
 .datepicker__header {
   text-align: center;
   background-color: #f0f0f0;
@@ -401,13 +408,11 @@ height:400px;
   padding-top: 8px;
   position: relative;
 }
-
 .datepicker__current-month {
   color: black;
   font-weight: bold;
   font-size: 13px;
 }
-
 .datepicker__navigation {
   line-height: 24px;
   text-align: center;
@@ -417,37 +422,30 @@ height:400px;
   width: 0;
   border: 6px solid transparent;
 }
-
 .datepicker__navigation--previous {
   left: 10px;
   border-right-color: #ccc;
 }
-
 .datepicker__navigation--previous:hover {
   border-right-color: #b3b3b3;
 }
-
 .datepicker__navigation--next {
   right: 10px;
   border-left-color: #ccc;
 }
-
 .datepicker__navigation--next:hover {
   border-left-color: #b3b3b3;
 }
-
 .datepicker__week-day {
   color: #ccc;
   display: inline-block;
   width: 28px;
   line-height: 24px;
 }
-
 .datepicker__month {
   margin: 5px;
   text-align: center;
 }
-
 .datepicker__day {
   color: #000;
   display: inline-block;
@@ -457,39 +455,31 @@ height:400px;
   margin: 2px;
   cursor: pointer;
 }
-
 .datepicker__day:hover {
   border-radius: 4px;
   background-color: #f0f0f0;
 }
-
 .datepicker__day--today {
   font-weight: bold;
 }
-
 .datepicker__day--selected {
   border-radius: 4px;
   background-color: #216ba5;
   color: #fff;
 }
-
 .datepicker__day--selected:hover {
   background-color: #1d5d90;
 }
-
 .datepicker__day--disabled {
   cursor: default;
   color: #ccc;
 }
-
 .datepicker__day--disabled:hover {
   background-color: transparent;
 }
-
 .datepicker__input-container {
   position: relative;
 }
-
 .datepicker__input {
   position: relative;
   font-size: 13px;
@@ -499,17 +489,14 @@ height:400px;
   line-height: 16px;
   padding: 6px 10px 5px;
 }
-
 .datepicker__input:focus {
   outline: none;
   border-color: #aeaeae;
   box-shadow: inset 0 2px 2px #e9e9e9, 0 0 10px 0 rgba(73, 107, 125, 0.3);
 }
-
 .datepicker__input:not(:valid) ~ .close-icon {
   display: none;
 }
-
 .close-icon {
   background-color: transparent;
   border: 0;
@@ -520,7 +507,6 @@ height:400px;
   padding: 0;
   vertical-align: middle;
 }
-
 .close-icon:after {
   background-color: #216ba5;
   border-radius: 50%;
@@ -540,7 +526,6 @@ height:400px;
   text-align: center;
   top: 50%;
 }
-
 #radio-buttons {
   vertical-align: baseline;
   margin-top: 10px;
