--- a/matchly-server/assets/main.css
+++ b/matchly-server/assets/main.css
@@ -28,9 +28,16 @@ html, body, h1, h2, h3, h4, p, div, ul, li, a {
 .navigation h1 {
   font-family: "Helvetica Neue", Helvetica, sans-serif;
   color: rgba(245,243,92,1);
-  font-weight: 600;
-  margin: 20px 0 10px;
+  margin: 20px 0;
   font-style: italic;
+}
+.navigation h1 a {
+  color: rgba(245,243,92,1);
+  font-weight: 600;
+}
+.navigation h1 a:hover {
+  color: rgba(255,253,79,.75);
+  text-decoration: none;
 }
 .navigation ul li {
   font-size: 28px;
@@ -71,7 +78,7 @@ width: 100%;
 }
 .pb-container .pb-button {
   background: rgba(60,180,4,1);
-  border: 2px solid rgba(20,100,60,1);
+  border: 2px solid rgba(20,140,60,1);
   border-radius: 10px;
   color: #fff;
   cursor: pointer;
@@ -90,6 +97,7 @@ width: 100%;
 }
 .pb-container .pb-button:hover {
   background: rgba(60,180,4,.75);
+  border: 2px solid rgba(20,140,60,.5);
   color: #fff;
 }
 .pb-container .pb-button span {
