updating styles across site

--- a/matchly-server/assets/main.css
+++ b/matchly-server/assets/main.css
@@ -164,7 +164,7 @@ a.has-match:hover {
   animation: spin 0.9s infinite cubic-bezier(0.085, 0.260, 0.935, 0.710);
   width: 250px;
   margin: 10px auto;
-  padding: 0.7em 1em;
+  padding: 0.7em 1em 40px 1em;
   text-decoration: none;
 }
 .pb-container .pb-button svg.pb-progress-circle path {
