Hover on Calendar Day

--- a/matchly-server/assets/main.css
+++ b/matchly-server/assets/main.css
@@ -70,6 +70,9 @@ html, body, h1, h2, h3, h4, p, div, ul, li, a {
   text-decoration: none;
   color: green !important
 }
+.calendar-day:hover {
+  background: rgba(128,128,128,0.14);
+}
 a.has-data:hover {
   color: green !important;
 }
