--- a/matchly-server/assets/main.css
+++ b/matchly-server/assets/main.css
@@ -34,10 +34,12 @@ html, body, h1, h2, h3, h4, p, div, ul, li, a {
 .navigation h1 a {
   color: rgba(245,243,92,1);
   font-weight: 600;
+  transition: all 0.2s;
 }
 .navigation h1 a:hover {
   color: rgba(255,253,79,.75);
   text-decoration: none;
+  transition: all 0.2s;
 }
 .navigation ul li {
   font-size: 28px;
