--- a/matchly-server/assets/main.css
+++ b/matchly-server/assets/main.css
@@ -13,7 +13,60 @@ html, body, h1, h2, h3, h4, p, div, ul, li, a {
   text-decoration: none;
 }
 
+/*====================================================
+================= .navigation styles =================
+====================================================*/
 
+.navigation {
+  background-color: #222;
+  border-color: #080808;
+  border-top: 2px solid rgba(245,243,92,1);
+  -webkit-box-shadow: 0px 1px 1px 1px rgba(245,203,92,0.75);
+  -moz-box-shadow: 0px 1px 1px 1px rgba(245,203,92,0.75);
+  box-shadow: 0px 1px 1px 1px rgba(245,203,92,0.75);
+}
+.navigation h1 {
+  font-family: "Helvetica Neue", Helvetica, sans-serif;
+  color: rgba(245,243,92,1);
+  margin: 20px 0;
+  font-style: italic;
+}
+.navigation h1 a {
+  color: rgba(245,243,92,1);
+  font-weight: 600;
+  transition: all 0.2s;
+}
+.navigation h1 a:hover {
+  color: rgba(255,253,79,.75);
+  text-decoration: none;
+  transition: all 0.2s;
+}
+.navigation ul li {
+  font-size: 28px;
+  float: left;
+  padding: 20px 5px;
+  letter-spacing: 1px;
+}
+.navigation ul li a {
+  color: #fff;
+  transition: all 0.2s;
+}
+.navigation ul li a:focus {
+  color: #fff;
+  text-decoration: none;
+  outline: none;
+}
+.navigation ul li a:hover  {
+  color: rgba(245,243,92,1);
+  background-color: rgba(66,66,66,.75) !important;
+  text-decoration: none;
+  outline: none;
+  transition: all 0.2s;
+}
+
+/*====================================================
+================= .navigation styles =================
+====================================================*/
 
 #workArea > .table > .table-condensed > tr {
   margin-bottom: 5px;
